--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ Design and Development of DSP based FACTS controllers <br> Rs. 4.85 Lakhs <br>	P
             </h3>
             <p class="subtitle-a">
 Power System Analysis<br>
-(click on the unit to view and download the materials)
+(click on the unit to download and view the materials)
             </p>
             <div class="line-mf"></div>
           </div>
